infrastructure/gateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-app
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http  
  hostnames: ["frontend-app.com"] 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
